@@ -1,19 +1,21 @@
 /*
- * Copyright 2003-2012 the original author or authors.
+ *  Licensed to the Apache Software Foundation (ASF) under one
+ *  or more contributor license agreements.  See the NOTICE file
+ *  distributed with this work for additional information
+ *  regarding copyright ownership.  The ASF licenses this file
+ *  to you under the Apache License, Version 2.0 (the
+ *  "License"); you may not use this file except in compliance
+ *  with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *    http://www.apache.org/licenses/LICENSE-2.0
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ *  Unless required by applicable law or agreed to in writing,
+ *  software distributed under the License is distributed on an
+ *  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ *  KIND, either express or implied.  See the License for the
+ *  specific language governing permissions and limitations
+ *  under the License.
  */
-
 
 package org.codehaus.groovy.runtime.m12n
 
@@ -35,15 +37,17 @@ public class ExtensionModuleHelperForTests {
     }
     org.junit.runner.JUnitCore.main('TempTest')
 """
-        def cl = ExtensionModuleHelperForTests.classLoader
-        while (!(cl instanceof URLClassLoader)) {
-            cl = cl.parent
-            if (cl ==null) {
-                throw new RuntimeException("Unable to find class loader")
-            }
-        }
-        def cp = ((URLClassLoader)cl).URLs.collect{ new File(it.toURI()).absolutePath}
+
+        Set<String> cp = System.getProperty("java.class.path").split(File.pathSeparator) as Set
         cp << baseDir.absolutePath
+
+        boolean jdk9 = false;
+        try {
+            jdk9 = this.classLoader.loadClass("java.lang.reflect.Module") != null
+        } catch (e) {
+            // ignore
+        }
+
         def ant = new AntBuilder()
         try {
             ant.with {
@@ -59,14 +63,21 @@ public class ExtensionModuleHelperForTests {
                                     pathelement location: it
                                 }
                             }
+                            if (jdk9) {
+                                jvmarg(value: '--add-modules')
+                                jvmarg(value: 'java.xml.bind')
+                            }
                         }
                 )
             }
         } finally {
+            String out = ant.project.properties.out
             String err = ant.project.properties.err
             baseDir.deleteDir()
-            if (err) {
-                throw new RuntimeException(err)
+            if (err && err.trim() != 'Picked up JAVA_TOOL_OPTIONS: -Dfile.encoding=UTF-8') {
+                throw new RuntimeException("$err\nClasspath: ${cp.join('\n')}")
+            } else if ( out.contains('FAILURES') || ! out.contains("OK")) {
+                throw new RuntimeException("$out\nClasspath: ${cp.join('\n')}")
             }
         }
     }
